@@ -1,7 +1,7 @@
 import org.irundaia.sass.Minified
 import uk.gov.hmrc.DefaultBuildSettings.itSettings
 
-ThisBuild / scalaVersion := "3.4.2"
+ThisBuild / scalaVersion := "3.7.0"
 ThisBuild / majorVersion := 3
 
 lazy val microservice = Project("for-frontend", file("."))
@@ -9,8 +9,11 @@ lazy val microservice = Project("for-frontend", file("."))
   .disablePlugins(JUnitXmlReportPlugin)
   .settings(
     PlayKeys.playDefaultPort := 9521,
+    maintainer := "voa.service.optimisation@digital.hmrc.gov.uk",
     scalacOptions += "-Wconf:src=routes/.*:s",
-    scalacOptions += "-Wconf:cat=unused-imports&src=html/.*:s",
+    scalacOptions += "-Wconf:msg=Flag .* set repeatedly:s",
+    scalacOptions += "-Wconf:msg=Implicit parameters should be provided with a \\`using\\` clause&src=views/.*:s",
+    javaOptions += "-XX:+EnableDynamicAgentLoading",
     libraryDependencies ++= AppDependencies.appDependencies
   )
   .settings(
@@ -39,3 +42,6 @@ lazy val it =
     .enablePlugins(PlayScala)
     .dependsOn(microservice % "test->test")
     .settings(itSettings())
+    .settings(
+      scalacOptions += "-Wconf:msg=Flag .* set repeatedly:s"
+    )
